--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -1,3 +1,6 @@
+.container {
+  margin: 0 auto;
+}
 .row {
   margin-left: -15px;
   margin-right: -15px;
@@ -33,23 +36,74 @@
   float: right;
 }
 
-table {
+.table {
   width: 100%;
+  margin-bottom: 1rem;
+  color: #212529;
+  border-collapse: collapse;
 }
+.table-bordered {
+  border: 1px solid #dee2e6;
+}
+
+.table .thead-dark th {
+  color: #fff;
+  background-color: #343a40;
+  border-color: #454d55;
+}
+
+.table-bordered thead td, .table-bordered thead th {
+  border-bottom-width: 2px;
+}
+
+.table thead th {
+  vertical-align: bottom;
+  border-bottom: 2px solid #dee2e6;
+}
+
+.table-bordered td, .table-bordered th {
+  border: 1px solid #dee2e6;
+}
+
+.table td, .table th {
+  padding: .75rem;
+  vertical-align: top;
+  border-top: 1px solid #dee2e6;
+}
+
+.table td:first-child {
+  text-align: center;
+}
+
+
+
+
+
+
+
 
 @media (min-width: 480px) {
   .md4 {
     width: 100%;
+  }
+  .container {
+    width: 95%;
   }
 }
 @media (min-width: 768px) {
   .md4 {
     width: 50%;
   }
+  .container {
+    width: 85%;
+  }
 }
 @media (min-width: 1024px) {
   .md4 {
     width: 33.33%;
+  }
+  .container {
+    width: 80%;
   }
 }
 
